[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-usage-monitor"
version = "0.1.0"
description = "A tiny local desktop widget for your Claude Pro/Max rate limits."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["claude", "anthropic", "usage", "rate-limit", "widget", "tkinter", "desktop"]
authors = [{ name = "Correa" }]
classifiers = [
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
# No third-party dependencies. Standard library + Tkinter only.
dependencies = []

[project.scripts]
claude-usage = "claude_usage:main"

[project.urls]
Homepage = "https://github.com/Corread8/claude-usage-monitor"
Issues = "https://github.com/Corread8/claude-usage-monitor/issues"

[tool.setuptools]
py-modules = ["claude_usage"]
